--- a/snippets/header-mega-menu.liquid
+++ b/snippets/header-mega-menu.liquid
@@ -78,6 +78,7 @@
             {% if link.current %}
               aria-current="page"
             {% endif %}
+            data-handle = "{{ link.handle }}"
           >
             <span
               {%- if link.current %}
