--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -1,7 +1,17 @@
 .mega-menu {
   position: static;
 }
-
+.mega-menu summary::after {
+  content: "";
+  position: absolute;
+  width: 90px;
+  height: 80px;
+  top: 20px;
+  left: 0;
+}
+.mega-menu.set-background summary.list-menu__item {
+  background-color: #ff3b3f;
+}
 .mega-menu__content {
   background-color: rgb(var(--color-background));
   border-left: 0;
