--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,6 +34,10 @@
     <script src="{{ 'details-disclosure.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'search-form.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'ab-test.js' | asset_url }}" defer="defer"></script>
+
+    {{ 'swiper.min.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'swiper.min.js' | asset_url }}"></script>
 
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
@@ -256,6 +260,7 @@
     {% endstyle %}
 
     {{ 'base.css' | asset_url | stylesheet_tag }}
+    {{ 'megamenu.css' | asset_url | stylesheet_tag }}
     <link rel="stylesheet" href="{{ 'component-cart-items.css' | asset_url }}" media="print" onload="this.media='all'">
 
     {%- if settings.cart_type == 'drawer' -%}
@@ -310,6 +315,16 @@
     {% sections 'header-group' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
+      {% section 'megamenu1' %}
+      {% section 'megamenu2' %}
+      {% section 'megamenu3' %}
+      {% section 'megamenu4' %}
+      {% section 'megamenu5' %}
+      {% section 'megamenu6' %}
+      {% section 'megamenu7' %}
+      {% section 'megamenu8' %}
+      {% section 'megamenu9' %}
+      {% section 'megamenu10' %}
       {{ content_for_layout }}
     </main>
 
@@ -368,7 +383,7 @@
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
-
+    <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
     {%- if settings.cart_type == 'drawer' -%}
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
