--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -55,6 +55,7 @@
     display: flex;
     align-items: center;
     line-height: calc(1 + 0.3 / var(--font-body-scale));
+    color: #fff;
   }
 
   .list-menu__item--link {
@@ -150,27 +151,27 @@
       {%- if request.page_type == 'index' -%}
         <h1 class="header__heading">
       {%- endif -%}
-          <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset">
-            {%- if settings.logo != blank -%}
-              <div class="header__heading-logo-wrapper">
-                {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
-                {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
-                {% capture sizes %}(max-width: {{ settings.logo_width | times: 2 }}px) 50vw, {{ settings.logo_width }}px{% endcapture %}
-                {% capture widths %}{{ settings.logo_width }}, {{ settings.logo_width | times: 1.5 | round }}, {{ settings.logo_width | times: 2 }}{% endcapture %}
-                {{ settings.logo | image_url: width: 600 | image_tag:
-                  class: 'header__heading-logo motion-reduce',
-                  widths: widths,
-                  height: logo_height,
-                  width: settings.logo_width,
-                  alt: logo_alt,
-                  sizes: sizes,
-                  preload: true
-                }}
-              </div>
-            {%- else -%}
-              <span class="h2">{{ shop.name }}</span>
-            {%- endif -%}
-          </a>
+        <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset ab__test test-element" data-test-name="our-test">
+          {%- if settings.logo != blank -%}
+            <div class="header__heading-logo-wrapper">
+              {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
+              {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
+              {% capture sizes %}(max-width: {{ settings.logo_width | times: 2 }}px) 50vw, {{ settings.logo_width }}px{% endcapture %}
+              {% capture widths %}{{ settings.logo_width }}, {{ settings.logo_width | times: 1.5 | round }}, {{ settings.logo_width | times: 2 }}{% endcapture %}
+              {{ settings.logo | image_url: width: 600 | image_tag:
+                class: 'header__heading-logo motion-reduce',
+                widths: widths,
+                height: logo_height,
+                width: settings.logo_width,
+                alt: logo_alt,
+                sizes: sizes,
+                preload: true
+              }}
+            </div>
+          {%- else -%}
+            <span class="h2">{{ shop.name }}</span>
+          {%- endif -%}
+        </a>          
       {%- if request.page_type == 'index' -%}
         </h1>
       {%- endif -%}
@@ -190,7 +191,7 @@
       {%- if request.page_type == 'index' -%}
         <h1 class="header__heading">
       {%- endif -%}
-          <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset">
+          <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset ab__test test-element" data-test-name="our-test">
             {%- if settings.logo != blank -%}
               <div class="header__heading-logo-wrapper">
                 {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
@@ -209,6 +210,27 @@
               </div>
             {%- else -%}
               <span class="h2">{{ shop.name }}</span>
+            {%- endif -%}
+          </a>
+          <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset ab__test-hide test-element" data-test-name="our-test">
+            {%- if settings.logo != blank -%}
+              <div class="header__heading-logo-wrapper">
+                {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
+                {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
+                {% capture sizes %}(min-width: 750px) {{ settings.logo_width }}px, 50vw{% endcapture %}
+                {% capture widths %}{{ settings.logo_width }}, {{ settings.logo_width | times: 1.5 | round }}, {{ settings.logo_width | times: 2 }}{% endcapture %}
+                {{ settings.logo | image_url: width: 600 | image_tag:
+                  class: 'header__heading-logo',
+                  widths: widths,
+                  height: logo_height,
+                  width: settings.logo_width,
+                  alt: logo_alt,
+                  sizes: sizes,
+                  preload: true
+                }}
+              </div>
+            {%- else -%}
+              <span class="h2">A/B Testing</span>
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
@@ -433,6 +455,32 @@
     ],
     "url": {{ request.origin | append: page.url | json }}
   }
+
+  
+</script>
+
+<script>
+  // Additional JS code to add hover support for Dawn megamenu
+  function bindMouseOverToMegaMenu (item) {
+    item.addEventListener("mouseover", () => {
+        item.setAttribute("open", true);
+        item.classList.add('set-background');
+        item.querySelector(".mega-menu__content").addEventListener("mouseover", () => {
+          item.setAttribute("open", true);
+          item.classList.add('set-background');
+        });
+        item.querySelector(".mega-menu__content").addEventListener("mouseleave", () => {
+          item.removeAttribute("open");
+          item.classList.remove('set-background');
+        });
+      item.addEventListener("mouseleave", () => {
+        item.removeAttribute("open");
+        item.classList.remove('set-background');
+      });
+    });
+  }
+  let items = document.querySelector(".header__inline-menu").querySelectorAll("details.mega-menu");
+  items.forEach(bindMouseOverToMegaMenu);
 </script>
 
 {%- if request.page_type == 'index' -%}
